Tests working after merge, adressed capitalisation issues